--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
-spring.profiles.active=postgresql
+spring.datasource.driverClassName= org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://snuffleupagus.db.elephantsql.com/bfmaecyp
+spring.datasource.username=bfmaecyp
+spring.datasource.password=0VdSoFpPyLTugOTQlJsBBhApd35rfH0n
+spring.datasource.hikari.minimum-idle= 2
+spring.datasource.hikari.maximum-pool-size= 3
+spring.datasource.hikari.connection-timeout = 20000
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime= 1000
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.profiles.active=postgresql
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 
@@ -9,10 +22,10 @@ jwtExpirationMs=86400000
 
 spring.aop.auto=true
 
-database=postgresql
-
-spring.cloud.gcp.sql.database-name=cinema-app
-spring.cloud.gcp.sql.instance-connection-name=cinemaapp-410219:us-central1:postgresql-instance
-
-# Initialize the database since the newly created Cloud SQL database has no tables. The following flag is for Spring Boot 2.5+.
-spring.sql.init.mode=always
+#database=postgresql
+#
+#spring.cloud.gcp.sql.database-name=cinema-app
+#spring.cloud.gcp.sql.instance-connection-name=cinemaapp-410219:us-central1:postgresql-instance
+#
+## Initialize the database since the newly created Cloud SQL database has no tables. The following flag is for Spring Boot 2.5+.
+#spring.sql.init.mode=always
